<resources>
    <string name="app_name">EX5</string>
    <string name="intro">This exercise will demonstrate the creation of Views and Layouts dinamically from the code (instead from XML file)</string>
    <string name="intro2">This layout is totaly prepared during run-time</string>
    <string name="checkBox1">First</string>
    <string name="checkBox2">Second</string>
    <string name="tg">Click me to change the layout below</string>
    <string name="intro3">This layout is prepared beforhand but loaded in run-time</string>
    <string name="radioGroup">What option do you prefer?</string>
    <string name="radio">Option1</string>
    <string name="radio2">Option2</string>
    <string name="hint">Option ?</string>

</resources>
